--- a/easy_en.dict.yaml
+++ b/easy_en.dict.yaml
@@ -259,6 +259,7 @@ andorra	andorra
 andrea	andrea
 andrew	andrew
 andrews	andrews
+Android	android
 andy	andy
 angel	angel
 angela	angela
@@ -3173,6 +3174,7 @@ kevin	kevin
 keyboard	keyboard
 keynote	keynote
 keyword	keyword
+kit	kit
 kick	kick
 kidney	kidney
 kill	kill
@@ -6240,6 +6242,7 @@ widely	widely
 widespread	widespread
 width	width
 wife	wife
+wifi	wifi
 wild	wild
 wilderness	wilderness
 wildlife	wildlife
