update get date string

--- a/easy_en.dict.yaml
+++ b/easy_en.dict.yaml
@@ -5704,7 +5704,7 @@ thai	thai
 thailand	thailand
 than	than
 thank	thank
-thanks	Thanks
+thanks	thanks
 thanksgiving	thanksgiving
 that	that
 the	the
