--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,9 @@ trim_trailing_whitespace = true
 trim_trailing_whitespace = false
 
 [*.yaml]
+indent_size = 2
+
+[*.dict.yaml]
 indent_style = tab
 indent_size = 2
 
