--- a/luna_pinyin_simp.custom.yaml
+++ b/luna_pinyin_simp.custom.yaml
@@ -97,8 +97,8 @@ patch:
     # 设置 是否显示拼音提示 0不显示 其他的为几个字符才显示
     spelling_hints: 2
     initial_quality: 1
-    enable_encoder: false
-    encode_commit_history: true
+    # enable_encoder: false
+    # encode_commit_history: false
 
     # preedit_format:
     #   - "xform/([nljqxyzcs])v/$1ü/" # v => ü
@@ -159,8 +159,8 @@ patch:
       - abbrev/^([a-z]).+$/$1/           # 簡拼（首字母）
       - abbrev/^([zcs]h).+$/$1/          # 簡拼（zh, ch, sh）
 
-      - derive/^([zcs])h/$1/             # zh, ch, sh => z, c, s
-      - derive/^([zcs])([^h])/$1h$2/     # z, c, s => zh, ch, sh
+      # - derive/^([zcs])h/$1/             # zh, ch, sh => z, c, s
+      # - derive/^([zcs])([^h])/$1h$2/     # z, c, s => zh, ch, sh
 
       # - derive/^n/l/                     # n => l
       # - derive/^l/n/                     # l => n
