--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -30,7 +30,7 @@ import_tables:
   - luna_pinyin.sougou.diet # 食品
   - luna_pinyin.sougou.daily # 日常
   - luna_pinyin.sougou.area # 地名
-  - luna_pinyin.sougou.warframe
+  # - luna_pinyin.sougou.warframe
   - luna_pinyin.sougou.yuanshen
   - luna_pinyin.sougou.popular
   # - luna_pinyin.sougou.threeKingdoms # 三国
